attempt to resolve hamburger not showing on phone

--- a/Content/home.css
+++ b/Content/home.css
@@ -8,6 +8,9 @@ body{
     #hamburger-collapse{
         display:none;
     }
+    #toggle-btn{
+        display:inline;
+    }
 
     body{
         font-size:18pt;
@@ -20,6 +23,9 @@ body{
 @media screen and (min-width: 640px){
     #hamburger-collapse{
         display:inline-block;
+    }
+    #toggle-btn{
+        display:none;
     }
 }
 
